--- a/New folder/index.html
+++ b/New folder/index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CodeJam _ ZeroOne</title>
-    <link rel="stylesheet" href="index.css"> 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>CodeJam - Zero0ne</title>
+<link rel="stylesheet" href="index.css">
 </head>
 <body>
 
-    <div class="container">
+<div class="container">
+<div class="card">
+<div class="card-one">
+<img src="ZOCC_logo.png" alt="">
+</div>
+<div class="card-two">
+    <h1> ZeroOne Code Club</h1>
+    <h2> Student Activity Center</h2>
 
-        <div class="card">
-        <div class="carde-one">
-            <img src="ZOCC_logo.png" alt="">
-        </div>
-            <div class="card-two">
-             <h1>ZeroOne code club</h1>   
-            <h2>Student activity center</h2>
-            <a href="#">Join</a>
-            </div>
-
-
-        </div>
-
-    </div>
+    <a href="#">Join</a>
+</div>
+</div>
+</div>
 </body>
 </html>
